cluster/services/code-server/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: code-server
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`code.${DOMAIN_EXTERNAL}`)
      services:
        - kind: Service
          name: code-server
          namespace: code-server
          port: 8080
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
  tls:
    secretName: code.${DOMAIN_EXTERNAL}
